# naukri-linkedin-webscraper

./: .gitignore  README.md  linkedin-web-scraping.ipynb  naukri-linkedin-web-scraping.ipynb  naukri_web_scraping.py  pyproject.toml
