[project]
name = "naukri-linkedin-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "python-calamine>=0.3.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "xlsxwriter>=3.2.2",
]
